--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "@originjs/vite-plugin-global-style": "1.0.2",
     "sass": "1.32.6",
+    "vite": "2.6.14",
     "vite-plugin-imagemin": "0.4.6",
     "vite-plugin-mkcert": "1.5.2",
-    "vite-plugin-nunjucks": "0.1.9",
-    "vite": "2.6.14"
+    "vite-plugin-nunjucks": "0.1.9"
   }
 }
