--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-global-style": "1.0.2",
+    "babel-eslint": "10.1.0",
     "sass": "1.32.6",
     "vite": "2.6.14",
     "vite-plugin-imagemin": "0.4.6",
